objects/PicklistTest1__c.object
<CustomObject>
    <description>PicklistTest1 test</description>
    <fields>
        <fullName>FormulaField2__c</fullName>
        <description>ccc</description>
        <formula>StatesInfoFormula__c  &amp;  country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ccc</inlineHelpText>
        <label>FormulaField2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaField33__c</fullName>
        <description>https://login.autorabit.com/
HYPERLINK(&quot;https://login.autorabit.com/&quot;, &quot;Release Management Tool&quot;)</description>
        <formula>HYPERLINK(&quot;https://login.autorabit.com/&quot;, &quot;Release Management Tool&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HYPERLINK(&quot;https://login.autorabit.com/&quot;, &quot;Release Management Tool&quot;)</inlineHelpText>
        <label>FormulaField33</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTLookupFiled1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PTLookupFiled1</description>
        <inlineHelpText>PTLookupFiled1</inlineHelpText>
        <label>PicklistTest1</label>
        <referenceTo>PicklistTest1__c</referenceTo>
        <relationshipLabel>PicklistTest1s</relationshipLabel>
        <relationshipName>PicklistTest1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatesInfoFormula__c</fullName>
        <description>test</description>
        <formula>country__c  &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatesInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatesInfo__c</fullName>
        <description>New Field created by AutoRABIT</description>
        <label>StatesInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <description>New Field created by AutoRABIT</description>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PicklistTest1</label>
    <nameField>
        <label>PicklistTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PicklistTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>